--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,18 @@
 <!doctype html>
 <html lang="">
   <head>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=<%= VUE_APP_KAKAO_MAP_KEY %>"
+    ></script>
+    <script
+      src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.9/kakao.min.js"
+      integrity="sha384-JpLApTkB8lPskhVMhT+m5Ln8aHlnS0bsIexhaak0jOhAkMYedQoVghPfSpjNi9K1"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      Kakao.init(process.env.VUE_APP_KAKAO_MAP_KEY)
+    </script>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
